src/page-modules/assistant/assistant.module.css
.wrapper {
  background-color: token('color.background.accent.0.background');
}
.container {
  background-color: token('color.background.accent.0.background');
  height: 100%;
  position: relative;
  display: grid;
  grid-template-areas:
    'main'
    'alternatives';
}

.main {
  grid-area: main;
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: token('spacing.xLarge');
  width: 100%;
  max-width: var(--maxPageWidth);
  padding: token('spacing.xLarge');
  margin: 0 auto;
}

.input {
  display: flex;
  flex-direction: column;
}

.inputGroup {
  position: relative;
}

.button {
  text-align: center;
}

.heading {
  color: token('color.background.accent.0.foreground.primary');
  margin-bottom: token('spacing.medium');
}

.alternativesWrapper {
  grid-area: alternatives;
  width: 100%;
  background-color: token('color.background.accent.1.background');
}

.alternatives {
  display: flex;
  flex-direction: column;
  gap: token('spacing.medium');
  padding: token('spacing.xLarge');
  width: 100%;
  max-width: var(--maxPageWidth);
  margin: 0 auto;
  padding-bottom: 5.75rem;
  display: flex;
  flex-direction: column;
  gap: token('spacing.large');
}

.buttons {
  grid-area: alternatives;
  align-self: end;
  display: flex;
  justify-content: flex-end;
  gap: token('spacing.medium');
  width: 100%;
  max-width: var(--maxPageWidth);
  margin: 0 auto;
  padding: 0 token('spacing.xLarge') token('spacing.xLarge')
    token('spacing.xLarge');
  z-index: 10;
  position: absolute;
  left: 0;
  right: 0;
}

.searchInputButton {
  height: var(--height);
  border: none;
  background-color: token('color.background.neutral.0.background');
  border: token('border.width.slim') solid
    token('color.foreground.dynamic.disabled');
  padding: token('spacing.small');
  border-radius: 50%;
  cursor: pointer;
  display: flex;
  align-items: center;
  position: absolute;
  top: 50%;
  right: token('spacing.medium');
  transform: translate(0, -50%);
  z-index: 100;
}

@media (max-width: 650px) {
  .container {
    grid-template-areas:
      'main'
      'buttons'
      'alternatives';
  }

  .main {
    display: flex;
    flex-direction: column;
    padding-bottom: token('spacing.xLarge') !important;
  }

  .buttons {
    grid-area: buttons;
    display: grid;
    grid-template-columns: 1fr 1fr;
    position: relative;
  }

  .alternatives {
    padding-bottom: token('spacing.xLarge');
  }
}

.contentContainer {
  margin: 0 auto;
  max-width: var(--maxPageWidth);
  padding: token('spacing.xLarge');
  display: flex;
  flex-direction: column;
  gap: token('spacing.medium');
}

.tripResults {
  display: flex;
  flex-direction: column;
  gap: token('spacing.large');
}

.nonTransitResult {
  display: flex;
  flex-wrap: wrap;
  gap: token('spacing.medium');
}

.spanColumns {
  grid-column: 1 / -1;
}

